[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/Flasher.gd" type="Script" id=1]

[node name="Flasher" type="Node"]
script = ExtResource( 1 )

[node name="FlashTimer" type="Timer" parent="."]

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
